# fastapi_todoapp_api

./: .env  README.md  database.py  main.py  models.py  pyproject.toml
routers/: admin.py  auth.py  todos.py  users.py
